--- a/sites/all/themes/wttoc/sass/components/Extras_TabBlocks.scss
+++ b/sites/all/themes/wttoc/sass/components/Extras_TabBlocks.scss
@@ -1,3 +1,5 @@
+
+
 /*
  * TabBlocks: Tabs Display Fontello Icon
  */
@@ -8,7 +10,7 @@
 /*
  * Tab Blocks With Jquery
  */
-
+/*
 .js .tabJS{
 	display: inline-block;
 	margin-right: 5px;
@@ -59,3 +61,5 @@
 		@include cssTransition(none);
 	}
 }
+
+*/
