--- a/sites/all/themes/wttoc/sass/components/Views_All_BlogsAndNews.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BlogsAndNews.scss
@@ -1,4 +1,4 @@
-.view-id-pages_blogs_news.view-display-id-page_blog,
+/*.view-id-pages_blogs_news.view-display-id-page_blog,
 .view-id-pages_blogs_news.view-display-id-page_news{
 	.views-row{
 		@include clearfix;
@@ -85,3 +85,4 @@
 		}
 	}
 }
+*/
