--- a/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
@@ -1,6 +1,7 @@
 /* 
  * Content Type Displays
  */
+ /*
 body.node-type-event,body.node-type-business-service-or-attraction{ 
 	.l-content {
 		.lc-region--inner{
