--- a/sites/all/themes/wttoc/sass/components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/General_Elements.scss
@@ -123,4 +123,15 @@ footer.l-footer{
 		}
 }
 
-
+.sharethis-wrapper{
+	max-width:110px;
+	text-align:left;
+	@include centerYAbsoluteNoIE8;
+	position:fixed;
+	left:0;
+    z-index: 999;
+	padding: 5px 0px 10px 5px;
+    @include backgroundOpacity($GRAY, 0.5);
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
