--- a/sites/all/themes/wttoc/sass/components/Page_Home.scss
+++ b/sites/all/themes/wttoc/sass/components/Page_Home.scss
@@ -2,11 +2,25 @@ body.front{
 	h1.mainPageTitle{
 		display:none;
 	}
-	.mainContentC{
-		h2.block__title{
-			margin: 0 0 1px 0;
+	.l-content{
+		.b_title_cont{
+			margin-top:10px;
+			margin-bottom:14px;
 		}
 	}
+	.l-widetop{
+		.b_title_cont{
+			margin-top:8px;
+			margin-bottom:12px;
+		}
+	}
+	.l-region--sidebar-first, .l-region--sidebar-second{
+		.b_title_cont{
+			margin-top:11px;
+			margin-bottom:11px;
+		}
+	}
+	/*
 	.lc-region--inner .block > h2.block__title{
 		@include remFontSize($fontL);
 		@include linearGradient($LIGHTERDARKGRAY, $GRAY);
@@ -69,18 +83,19 @@ body.front{
 	.small_block_bn_news-container.block{
 		border-color: transparent;
 	}
+	*/
 	//Main Form
 	.l-region--widetop{ 
 		.views-exposed-form-businesses-and-events-page-results{
 			padding: 20px 5%;
 			text-align:center;
 			.views-exposed-form{
-				padding-top:20px;
+				padding-top:15px;
 				@include breakpoint($tablet2Wide){
-					padding-top:35px;
+					padding-top:20px;
 				};
 				@include breakpoint($breakpointWideP1){
-					padding-top:50px;
+					padding-top:25px;
 				};
 				display: inline-block;
 				.views-exposed-widget{
@@ -91,7 +106,7 @@ body.front{
 					&:before{
 						font-size: 24px;
 						margin-bottom: 10px;
-						@include backgroundOpacity($color1, .75);
+						@include backgroundOpacity($color1Dark, .75);
 						color: #fff;
 						padding: 12px;
 						border-radius: 5px 5px 30px 30px;
@@ -106,25 +121,25 @@ body.front{
 					&#edit-field-category-wrapper{
 						&:before{
 							content:'\e81b';
-							@include backgroundOpacity($color1Light, .87);
+							@include backgroundOpacity($color3, .87);
 						}
 					}
 					&#edit-field-category-event-wrapper{
 						&:before{
 							content:'\e81c';
-							@include backgroundOpacity($color1Dark, .75);
+							@include backgroundOpacity($color1, .75);
 						}
 					}
 					&#edit-field-start-datepicker-wrapper{
 						&:before{
 							content:'\e823';
-							@include backgroundOpacity($color1Dark, .75);
+							@include backgroundOpacity($color1, .75);
 						}
 					}
 					&#edit-field-end-datepicker-wrapper{
 						&:before{
 							content:'\e824';
-							@include backgroundOpacity($color1Dark, .75);
+							@include backgroundOpacity($color1, .75);
 						}
 					}
 					&#edit-field-ages-wrapper{
@@ -147,7 +162,7 @@ body.front{
 				}
 			}
 		}
-		#block-views-d400f6dac6873ec2ddd895ba96987fce{
+		.v_page_search_results-container{
 			//background		
 			background: url("/sites/all/themes/wttoc/images/prevImg/header.png");
 			background-size: auto 230%;
@@ -155,20 +170,10 @@ body.front{
 				background-size: 150% auto;
 			};
 			background-repeat: no-repeat;
-			min-height: 250px;
+			min-height: 200px;
 			background-position: center center;
 		}
 	}
 }
 
-/*
- * Body and Block Backgrounds
- */
-body.front{ 
-	.l-header, .l-main  .block__content{
-	  background-color:$WHITE;
-	}
-}
-body.front{
-  background-color: #D8D8D8;
-}
+
