--- a/sites/all/themes/wttoc/sass/variables/variables.scss
+++ b/sites/all/themes/wttoc/sass/variables/variables.scss
@@ -42,6 +42,13 @@ $mobile2Wide: $breakpointMobileP1 $breakpointWide;
 $mini2Tablet: $breakpointMiniP1 $breakpointTablet;
 
 /*
+ * Combined Breakpoints - 3 Level
+ */
+$mobile2XWide: $breakpointMobileP1 $breakpointXWide;
+$mini2Wide: $breakpointMiniP1 $breakpointXWide;
+
+
+/*
  * Font Size (1 =~ 10px)
  * Do not use px, rem, or em here. 
  */
@@ -71,37 +78,21 @@ $WHITE:#fff;
  * Theme Palette
  * Light and Blue Colors Work Better If They're Desaturated As Well
  */
-//$color1:#00CBE9;/*Light Blue*/
-//$color1Light:#C3DAE3;
-//$color1Dark:#015063;
-//$color1:#035163;/* Blue*/
-//$color1Light:#407D8B;
-//$color1Dark:#002A34;
-$color1:#5573a4;/* Blue*/
-//$color1Light:#7696cf;
-$color1Light:#A6B3CE;
-$color1Dark:#004656;
 
-$color2:#FD8A33;/*Orange*/
-$color2Light:#FFB882;
-$color2Dark:#B04D00;
-$color3:#8CC541;/*Light Green*/
-//$color3Light:#C8F094;
-$color3Light:#AEEC54;
-$color3Dark:#51870B;
-//$color3Dark:#62872C;
+$color1:#1981CE;/* Blue*/
+//$color1Light:lighten($color1, 10%);
+$color1Light: #69D1F5;
+$color1Dark:darken($color1, 20%);
+$color2:#FDA314;/*Orange*/
+$color2Light:lighten($color2, 7%);
+$color2Dark:darken($color2, 9%);
+$color3:#8FCD10;/*Light Green*/
+$color3Light:lighten($color3, 7%);
+$color3Dark:darken($color3, 22%);
 $colorAlt:#ffde00;/*BrightYellow*/
 $colorAltLight: lighten($colorAlt, 3.5%);
 $colorAltDark: darken($colorAlt, 3.5%);
-/*
- * Other Possible Palette
- * $color1:#aa6c39;
- * $color2:#aa9b39;
- * $color3:#7d2a69;
- * $color1Light:#d49a6a;
- * $color1Dark:#804515;
- * $colorAlt:#5a5;
- */
+
 
 /*
  *  Extra Derived Variables
